--- a/Scavdue.Data/Scavdue.Data.csproj
+++ b/Scavdue.Data/Scavdue.Data.csproj
@@ -18,4 +18,13 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Scavdue.Core\Scavdue.Core.csproj" />
+  </ItemGroup>
+
 </Project>
