Created DI for services and repositories

--- a/Scavdue/Scavdue.csproj
+++ b/Scavdue/Scavdue.csproj
@@ -21,7 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Scavdue.Business\Scavdue.Business.csproj" />
     <ProjectReference Include="..\Scavdue.Data\Scavdue.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
