--- a/Scavdue.Business/Scavdue.Business.csproj
+++ b/Scavdue.Business/Scavdue.Business.csproj
@@ -9,6 +9,16 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Services\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Scavdue.Core\Scavdue.Core.csproj" />
   </ItemGroup>
 
 </Project>
