--- a/Scavdue/appsettings.json
+++ b/Scavdue/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "ThisIsMyVerySecretKey",
+    "Issuer": "Test.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
